Stage 0: auto-inject --add-opens; verify full Panako run in the cloud
Panako's LMDB store reflects into java.nio, which JDK 16+ blocks — the PANAKO
strategy dies at startup without --add-opens java.base/java.nio and
java.base/sun.nio.ch. The harness now injects both automatically whenever it
invokes `java -jar`, so it runs on modern JDKs unchanged.

Verified the entire pipeline end-to-end on the cloud machine (Intel/Linux,
which matches the jar's bundled native libs): installed ffmpeg, indexed two
tracks with STRATEGY=panako, queried a clean recording, and the harness
classified it correct (score 1905) and printed the report + score distribution.
Confirmed Panako 2.1's real output format matches the parser (incl. the
"null / -1" no-match row -> treated as no match).

Documented both run paths in the README: run in the cloud (recommended,
especially on Apple Silicon where the jar's Intel-only native lib won't load),
or locally with the Rosetta + Intel-Java caveat.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Dm6MigkGrFx3UoRyvanNLV